--- a/privacy.html
+++ b/privacy.html
@@ -89,7 +89,7 @@
         <p><strong>App Details:</strong></p>
         <ul>
             <li><strong>App Name:</strong> Resume-Grok</li>
-            <li><strong>Developer:</strong> [Your Company Name]</li>
+            <li><strong>Developer:</strong> Flash Apps</li>
             <li><strong>Primary Market:</strong> India and Global</li>
             <li><strong>Content Rating:</strong> Everyone (suitable for all ages above 13)</li>
             <li><strong>Category:</strong> Productivity</li>
@@ -97,8 +97,8 @@
 
         <p><strong>Contact Information:</strong></p>
         <ul>
-            <li><strong>Developer Email:</strong> support@resume-grok.com</li>
-            <li><strong>Privacy Email:</strong> privacy@resume-grok.com</li>
+            <li><strong>Developer Email:</strong> flashapps59@gmail.com</li>
+            <li><strong>Privacy Email:</strong> flashapps59@gmail.com</li>
             <li><strong>Website:</strong> https://jayanth-n.github.io/Resume-Grok-Website/</li>
         </ul>
 
@@ -302,8 +302,8 @@
         <h3>11.2 Grievance Officer</h3>
         <p>For Indian users, our Grievance Officer can be contacted at:</p>
         <p>
-            <strong>Name:</strong> [Grievance Officer Name]<br>
-            <strong>Email:</strong> grievance@resume-grok.com<br>
+            <strong>Name:</strong> Flash Apps Support Team<br>
+            <strong>Email:</strong> flashapps59@gmail.com<br>
             <strong>Address:</strong> [Indian Office Address]<br>
             <strong>Response Time:</strong> Within 24 hours of receipt
         </p>
@@ -322,34 +322,34 @@
         
         <h3>13.1 Global Contact</h3>
         <p>
-            <strong>Email:</strong> privacy@resume-grok.com<br>
+            <strong>Email:</strong> flashapps59@gmail.com<br>
             <strong>Phone:</strong> [Your Phone Number]
         </p>
 
         <h3>13.2 India Office (Primary Market)</h3>
         <p>
-            <strong>Company Name:</strong> [Your Company Name]<br>
+            <strong>Company Name:</strong> Flash Apps<br>
             <strong>Address:</strong> [Complete Indian Business Address with PIN code]<br>
-            <strong>Email:</strong> india@resume-grok.com<br>
-            <strong>Support Email:</strong> support@resume-grok.com<br>
-            <strong>Grievance Officer:</strong> grievance@resume-grok.com<br>
+            <strong>Email:</strong> flashapps59@gmail.com<br>
+            <strong>Support Email:</strong> flashapps59@gmail.com<br>
+            <strong>Grievance Officer:</strong> flashapps59@gmail.com<br>
             <strong>Phone:</strong> +91-[Indian Phone Number]<br>
             <strong>Business Hours:</strong> 9:00 AM - 6:00 PM IST, Monday to Friday
         </p>
 
         <h3>13.3 Data Protection Officers</h3>
         <p>
-            <strong>Global DPO:</strong> dpo@resume-grok.com<br>
-            <strong>India DPO:</strong> dpo-india@resume-grok.com<br>
-            <strong>EU Representative:</strong> eu-rep@resume-grok.com (if applicable)
+            <strong>Global DPO:</strong> flashapps59@gmail.com<br>
+            <strong>India DPO:</strong> flashapps59@gmail.com<br>
+            <strong>EU Representative:</strong> flashapps59@gmail.com (if applicable)
         </p>
 
         <h3>13.4 Google Play Store Compliance</h3>
         <p>For Google Play Store related queries:</p>
         <ul>
-            <li><strong>Developer Console:</strong> [Your Developer Account]</li>
+            <li><strong>Developer Console:</strong> Flash Apps Developer Account</li>
             <li><strong>App ID:</strong> com.resumegrok.app (example)</li>
-            <li><strong>Policy Compliance:</strong> playstore-compliance@resume-grok.com</li>
+            <li><strong>Policy Compliance:</strong> flashapps59@gmail.com</li>
         </ul>
 
         <h2>14. Legal Basis for Processing</h2>
