Add visible contact section with email display on main page

--- a/index.html
+++ b/index.html
@@ -150,14 +150,25 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
             Open in Browser
         </a>
+        
+        <div style="margin-top: 2rem; padding: 1.5rem; background: rgba(63, 81, 181, 0.1); border-radius: 12px; border: 1px solid rgba(63, 81, 181, 0.3); backdrop-filter: blur(10px);">
+            <h3 style="margin: 0 0 1rem 0; color: #3f51b5; font-size: 1.2rem;">Contact & Support</h3>
+            <p style="margin: 0.5rem 0; color: #ffffff; font-size: 1rem;">
+                <strong>Email:</strong> <span style="color: #7986cb; font-family: monospace;">flashapps59@gmail.com</span>
+            </p>
+            <p style="margin: 0.5rem 0; color: #ffffff; font-size: 1rem;">
+                <strong>Support:</strong> <span style="color: #7986cb; font-family: monospace;">flashapps59@gmail.com</span>
+            </p>
+            <p style="margin: 0.5rem 0 0 0; color: #b0b0b0; font-size: 0.9rem;">
+                For any questions, feedback, or support requests
+            </p>
+        </div>
     </div>
 
     <footer class="footer">
         <div class="footer-links">
             <a href="privacy.html" class="footer-link">Privacy Policy</a>
             <a href="terms.html" class="footer-link">Terms of Service</a>
-            <a href="mailto:flashapps59@gmail.com" class="footer-link">Contact Us</a>
-            <a href="mailto:flashapps59@gmail.com" class="footer-link">Support</a>
             <a href="about.html" class="footer-link">About</a>
         </div>
         <p class="footer-text">&copy; 2025 Flash Apps. All rights reserved. | Made with ❤️ for professionals worldwide</p>
