updation of multiple things in webste

--- a/about.html
+++ b/about.html
@@ -179,12 +179,21 @@
         </ul>
 
         <div class="contact-info">
-            <h2>Get in Touch</h2>
+            <h2>Contact & Support</h2>
             <p>We'd love to hear from you! Whether you have feedback, suggestions, or need support:</p>
+            <div style="background: rgba(0, 0, 0, 0.4); padding: 1.5rem; border-radius: 12px; border: 1px solid rgba(128, 128, 128, 0.3); backdrop-filter: blur(10px); margin: 1rem 0;">
+                <p style="margin: 0.5rem 0; color: #ffffff; font-size: 1rem;">
+                    <strong>Email:</strong> <span style="color: #aaa; font-family: monospace;">flashapps59@gmail.com</span>
+                </p>
+                <p style="margin: 0.5rem 0; color: #ffffff; font-size: 1rem;">
+                    <strong>Support:</strong> <span style="color: #aaa; font-family: monospace;">flashapps59@gmail.com</span>
+                </p>
+                <p style="margin: 0.5rem 0 0 0; color: #b0b0b0; font-size: 0.9rem;">
+                    For any questions, feedback, or support requests
+                </p>
+            </div>
             <p>
-                <strong>Email:</strong> flashapps59@gmail.com<br>
-                <strong>Support:</strong> flashapps59@gmail.com<br>
-                <strong>Website:</strong> <a href="https://jayanth-n.github.io/Resume-Grok-Website/" style="color: #7986cb;">https://jayanth-n.github.io/Resume-Grok-Website/</a><br>
+                <strong>Website:</strong> <a href="https://jayanth-n.github.io/Resume-Grok-Website/" style="color: #aaa;">https://jayanth-n.github.io/Resume-Grok-Website/</a><br>
                 <strong>Download:</strong> Available on Google Play Store and App Store (coming soon)
             </p>
         </div>
