--- a/index.html
+++ b/index.html
@@ -302,14 +302,15 @@
 
         .feature-time {
             display: inline-block;
-            background: linear-gradient(45deg, #444, #777);
-            color: #e0e0e0;
+            background: linear-gradient(45deg, rgba(59, 130, 246, 0.8), rgba(37, 99, 235, 0.9));
+            color: #ffffff;
             padding: 0.4rem 1rem;
             border-radius: 25px;
             font-size: 0.8rem;
             font-weight: 600;
             margin-bottom: 1rem;
-            border: 1px solid rgba(128, 128, 128, 0.2);
+            border: 1px solid rgba(59, 130, 246, 0.4);
+            box-shadow: 0 2px 8px rgba(59, 130, 246, 0.3);
         }
 
         .feature-description {
